--- a/resumesite.html
+++ b/resumesite.html
@@ -7,39 +7,46 @@
         <title>Title Of Document</title>
     </head>
     <body>
-        <main>
-            <h1>Cash Rice</h1>
+        <header class="header">
+            <div class="headelem">
+                <h1 class="doc-name">Cash Rice</h1>
+                <details class="doc-name">
+                    <summary>Contact Information</summary>
+                    <span>cmrice@ucsd.edu</span>
+                    <nav>
+                        <a href="">Clickable Link</a>
+                    </nav>
+                </details>
+                <fieldset class="doc-name" id="box-id">
+                    <legend>Introduction</legend>
+                    <p>This is <b>Placeholder</b> text</p>
+                    <p>
+                        Though not ideal for first impressions, it is nice to get 
+                        aquainted with you! I am currently a 
+                        3rd year at University of Califorina, San Diego 
+                        (UCSD for short), a Electrical Computer Engineer major (ECE).
+                        Outside of major related hobbies, I enjoy fantasy reading as 
+                        well as listening to and creating music.
+                    </p>
+                </fieldset>
+            </div>
+
             <picture>
-                <source srcset="drrp.jpg">
-                <img src="drrp.jpg" alt="Image of Cash R.">
+                <img class="headelem" id="page-subject-img" src="./IMG/temp.jpg" alt="Image of Cash R.">
             </picture>
-
-            <details>
-                <summary>Contact Information</summary>
-                <nav>
-                    <a href="">Clickable Link</a>
-                </nav>
-            </details>
-
+        </header>
+        <main>
             <hr/> 
-
-            <h2>Introduction</h2>
-            <fieldset>
-                <legend>Bio</legend>
-                <p>This is <b>Placeholder</b> text</p>
-            </fieldset>
-
-            <hr/>
             
             <h2>Resume</h2>
-            <h3>ARCLab Research</h3>
-            <ul>
+            <h3 class="body-item-1">Tendon-Driven Catheter</h3>
+            <ul class="body-item-1">
                 <li>Worked on <em>design</em> and <em>data collection</em> of Tendon Driven Catheter robot.</li>
                 <li>Participated in small team design sessions.</li>
             </ul>
-            <aside>
-                <figure>
-                    <img src="20J_BB22.jpg" alt="Image of ARCLab">
+            <aside class="body-item-1">
+                <figure id="alab-p">
+                    <img src="IMG/20J_BB22.jpg" alt="Image of ARCLab">
                     <figcaption>ARCLab</figcaption>
                 </figure>
                 <h4>ARCLab Description</h4>
@@ -48,6 +55,16 @@
                     The leading lab professor is Michael Yip.
                 </p>
             </aside>
+
+            <h3 class="body-item-2">Softbody Simulation</h3>
+            <ul class="body-item-2">
+                <li>Created 3D rigid body simulation environment within NVIDA's 
+                    Isaac Sim.
+                </li>
+                <li>Learned of the indudstry standard algorithm that serves as 
+                    the basis for running 3D softbody simulation.
+                </li>
+            </ul>
         </main>
 
         <section>
