--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </ul>
                 <aside>
                     <figure id="alab-p">
-                        <img src="IMG/20J_BB22.jpg" alt="Image of ARCLab">
+                        <img src="IMG/ARCLab.jpg" alt="Image of ARCLab">
                         <figcaption>ARCLab</figcaption>
                     </figure>
                     <h4>ARCLab Description</h4>
@@ -67,6 +67,10 @@
                         the basis for running 3D softbody simulation.
                     </li>
                 </ul>
+                <figure>
+                    <img src="./IMG/SxPBD.gif" alt="GIF of Isaac Sim" style="width:48px;height:48px;">
+                    GIF didn't load
+                </figure>
             </div>
         </main>
 
