--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         the basis for running 3D softbody simulation.
                     </li>
                 </ul>
-                <figure>
+                <figure id="alab-p">
                     <img src="./IMG/SxPBD.gif" alt="GIF of Isaac Sim" style="width:48px;height:48px;">
                     GIF didn't load
                 </figure>
