--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </ul>
                 <aside>
                     <figure id="alab-p">
-                        <img src="IMG/ARCLab.jpg" alt="Image of ARCLab">
+                        <img src="IMG/20J_BB22.jpg" alt="Image of ARCLab">
                         <figcaption>ARCLab</figcaption>
                     </figure>
                     <h4>ARCLab Description</h4>
