clean up changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <aside>
                     <figure>
                         <img src="IMG/ARCLab.jpg" alt="Image of ARCLab" id="arclab-img">
-                        <figcaption>ARCLab</figcaption>
+                        <figcaption><cite><a href="https://www.ucsdarclab.com/">ARCLab</a></cite></figcaption>
                     </figure>
                     <h4>ARCLab Description</h4>
                     <p>
@@ -126,7 +126,7 @@
         </section>
 
         <footer>
-            <h2>Links To Related Sites</h3>
+            <h2>Links To Related Sites</h2>
         </footer>
     </body>
 </html>
