--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
             <div class="headelem">
                 <h1 class="doc-name">Cash Rice</h1>
                 <details class="doc-name">
-                    <summary>Contact Information</summary>
+                    <summary id="drop-down">Contact Information</summary>
                     <span>cmrice@ucsd.edu</span>
                     <nav>
                         <a href="">Clickable Link</a>
                     </nav>
                 </details>
                 <fieldset class="doc-name" id="box-id">
-                    <legend>Introduction</legend>
+                    <legend id="introduction">Introduction</legend>
                     <p>This is <b>Placeholder</b> text</p>
                     <p>
                         Though not ideal for first impressions, it is nice to get 
@@ -32,7 +32,7 @@
             </div>
 
             <picture class="headelem">
-                <img id="page-subject-img" src="./IMG/temp.jpg" alt="Image of Cash R.">
+                <img src="./IMG/temp.jpg" alt="Image of Cash R." id="page-subject-img">
             </picture>
         </header>
 
@@ -75,7 +75,7 @@
 
             <section class="body-item-3">
                 <h3>Survey</h3>
-                <form action="./Actions/action.php" method="get">
+                <form action="./Actions/action.php" method="get" id="survey-content">
                     <!--This is a quick form to showcase tags and their functions (consider removing)-->
                     <label for="cname">Company Name:</label>
                     <input type="text" id="cname" name="cname"><br/>
