--- a/index.html
+++ b/index.html
@@ -125,6 +125,36 @@
 
         </section>
 
+        <section class="survey">
+            <h2>Survey</h2>
+            <form id="contact-form" method="post" action="https://httpbin.org/post">
+
+                <label for="name">Name <span class="req">*</span>:</label>
+                <input type="text" id="name" name="name" required><br/>
+                <output id="name-error" class="name-error"></output>
+                <output id="name-info" class="name-error"></output>
+
+                <label for="email">Email <span class="req">*</span>:</label>
+                <input type="email" id="email" name="email" required><br/>
+                <output id="email-error" class="email-error"></output>
+                <output id="email-info" class="email-error"></output>
+
+                <label for="comments">Comments <span class="req">*</span>:</label>
+                <textarea id="comments" name="comments" required
+                    minlength="3"
+                    maxlength="400"></textarea>
+                <output id="comments-error" class="comments-error"></output>
+                <output id="comments-info" class="comments-error"></output>
+
+                <input type="hidden" value="true" name="possible_bot"><br/>
+
+                <input type="submit" value="submit">
+
+            </form>
+            <input type="hidden" name="form-errors" id="form-errors">
+            <script src="./scripts.js"></script>
+        </section>
+
         <footer>
             <h2>Links To Related Sites</h2>
         </footer>
