--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                 <input type="submit" value="submit">
 
             </form>
+            <button id="theme-switcher" style="visibility: hidden;" name="theme-switcher">Theme Switcher</button>
             <input type="hidden" name="form-errors" id="form-errors">
             <script src="./scripts.js"></script>
         </section>
