implemented basic color picker

--- a/index.html
+++ b/index.html
@@ -131,19 +131,19 @@
 
                 <label for="name">Name <span class="req">*</span>:</label>
                 <input type="text" id="name" name="name" required><br/>
-                <output id="name-error" class="name-error" name="name"></output>
+                <output id="name-error" class="error" name="name"></output>
                 <output id="name-info" class="name-error" name="name"></output>
 
                 <label for="email">Email <span class="req">*</span>:</label>
                 <input type="email" id="email" name="email" required><br/>
-                <output id="email-error" class="email-error" name="email"></output>
+                <output id="email-error" class="error" name="email"></output>
                 <output id="email-info" class="email-error" name="email"></output>
 
                 <label for="comments">Comments <span class="req">*</span>:</label>
                 <textarea id="comments" name="comments" required
                     minlength="3"
                     maxlength="400"></textarea>
-                <output id="comments-error" class="comments-error" name="comments"></output>
+                <output id="comments-error" class="error" name="comments"></output>
                 <output id="comments-info" class="comments-error" name="comments"></output>
 
                 <input type="hidden" value="true" name="possible_bot"><br/>
@@ -152,12 +152,23 @@
 
             </form>
             <button id="theme-switcher" style="visibility: hidden;" name="theme-switcher">Theme Switcher</button>
+
+            <div id="extra-credit">
+                <label for="pick-text-color">Pick Text Color:</label>
+                <input type="color" id="pick-text-color" value="#000000"><br/>
+
+                <label for="pick-background">Pick Background Color:</label>
+                <input type="color" id="pick-background" value="#44aa44"><br/>
+
+                <label for="pick-gradient">Pick Gradient Color:</label>
+                <input type="color" id="pick-gradient" value="#44aa44"><br/>
+            </div>
+
             <input type="hidden" name="form-errors" id="form-errors">
             <script src="./scripts.js"></script>
         </section>
 
         <footer>
-            <h2>Links To Related Sites</h2>
         </footer>
     </body>
 </html>
